# small_gicp_rust

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  TEST.md
scripts/: install-deps-ubuntu-22.04.sh
small-gicp-cxx/: Cargo.toml  build.rs
small-gicp-cxx/examples/: basic_usage.rs  io_operations.rs  point_cloud_operations.rs
small-gicp-cxx/include/: wrapper.cpp  wrapper.h  wrapper_minimal.cpp  wrapper_simple.cpp
small-gicp-cxx/src/: ffi.rs  incremental_voxel_map.rs  io.rs  kdtree.rs  lib.rs  point_cloud.rs  registration.rs  transform.rs  unsafe_kdtree.rs
small-gicp-rust/: Cargo.toml  README.md
small-gicp-rust/data/: T_target_source.txt  source.ply  target.ply
small-gicp-rust/examples/: advanced_configuration_demo.rs  advanced_preprocessing_demo.rs  basic_registration.rs  custom_point_cloud_implementations.rs  generic_algorithms_demo.rs  generic_point_cloud_demo.rs  performance_comparison.rs  preprocessing_demo.rs  registration_demo.rs  registration_example.rs  simple_registration_demo.rs  test_covariance_features.rs  voxel_map_demo.rs  voxel_map_search_demo.rs  voxelmap_demo.rs
small-gicp-rust/src/: config.rs  error.rs  generic.rs  kdtree.rs  kdtree_internal.rs  lib.rs  point_cloud.rs  preprocessing.rs  registration.rs  traits.rs  voxelmap.rs
small-gicp-rust/src/generic/: kdtree.rs  preprocessing.rs
small-gicp-rust/src/kdtree/: mod.rs  tests.rs
small-gicp-rust/src/tests/: mod.rs  registration_test.rs
small-gicp-rust/tests/: basic_integration_test.rs  borrowed_kdtree_test.rs  covariance_direct_access_tests.rs  covariance_direct_access_tests.rs.disabled  integration_tests.rs  integration_tests.rs.disabled  registration_test.rs  test_io_integration.rs  trait_tests.rs
small-gicp-rust/tests/common/: mod.rs  test_io.rs
small-gicp-sys/: Cargo.toml  README.md  build.rs  wrapper.h
small-gicp-sys/examples/: basic_usage.rs  io_operations.rs  point_cloud_operations.rs
small-gicp-sys/include/: wrapper.cpp  wrapper.h
small-gicp-sys/src/: ffi.rs  io.rs  kdtree.rs  lib.rs  point_cloud.rs  preprocessing.rs  registration.rs  unsafe_kdtree.rs  voxel_map.rs
small-gicp-sys/tests/: integration_test.rs
small_gicp_c/: CMakeLists.txt  PROGRESS.md  README.md
small_gicp_c/cmake/: small_gicp_c-config.cmake.in  small_gicp_c.pc.in
small_gicp_c/example/: CMakeLists.txt  advanced_registration_example.c  basic_registration.c  kdtree.c  preprocessing.c  test_advanced_ann.c  test_advanced_features.c  test_covariance_parallel.c  test_direct_access.c  test_factor_access.c  test_incremental_voxelmap.c  test_parallel_utilities.c
small_gicp_c/include/: small_gicp_c.h
small_gicp_c/include/small_gicp_c/: types.h
small_gicp_c/include/small_gicp_c/ann/: gaussian_voxelmap.h  incremental_voxelmap.h  kdtree.h  unsafe_kdtree.h
small_gicp_c/include/small_gicp_c/io/: io.h
small_gicp_c/include/small_gicp_c/points/: point_cloud.h
small_gicp_c/include/small_gicp_c/registration/: registration.h
small_gicp_c/include/small_gicp_c/util/: downsampling.h  local_features.h  normal_estimation.h  sorting.h  version.h
small_gicp_c/src/: common.h  small_gicp_c.cpp  types.cpp
small_gicp_c/src/ann/: gaussian_voxelmap.cpp  incremental_voxelmap.cpp  kdtree.cpp  unsafe_kdtree.cpp
small_gicp_c/src/io/: io.cpp
small_gicp_c/src/points/: point_cloud.cpp
small_gicp_c/src/registration/: advanced_registration.cpp  factors.cpp  registration.cpp
small_gicp_c/src/util/: downsampling.cpp  local_features.cpp  normal_estimation.cpp  sorting.cpp  version.cpp
small_gicp_c/tests/: CMakeLists.txt  test_common.c  test_common.h
small_gicp_c/tests/data/: T_target_source.txt  source.ply  target.ply
small_gicp_c/tests/unit/: test_point_cloud.c  test_types.c
